--- a/demo/package.json
+++ b/demo/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "canvas-to-blob": "^1.0.0",
+    "getusermedia": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
