--- a/demo/package.json
+++ b/demo/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build "
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "canvas-to-blob": "^1.0.0",
     "core-js": "^3.4.4",
+    "numjs": "^0.16.0",
+    "opencv.js": "^1.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
-    "canvas-to-blob": "^1.0.0",
-    "getusermedia": "^2.0.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
