--- a/package.json
+++ b/package.json
@@ -1,53 +1,21 @@
 {
-  "name": "Prestamype-Webcam",
-  "version": "0.0.8",
-  "description": "Vuejs Webcam component",
-  "main": "dist/index.js",
-  "contributors": [],
-  "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config build/webpack.config.js"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "canvas-to-blob": "^1.0.0",
-    "canvas-toBlob": "^1.0.0",
-    "vue": "^2.5.17"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
-    "babel-runtime": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "function-bind": "^1.0.2",
-    "getusermedia": "^2.0.1",
-    "html-webpack-plugin": "^2.8.1",
-    "lodash": "^4.17.10",
-    "vue-loader": "^15.0.0",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.7",
-    "vuetify": "^1.4.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0",
-    "webpack-merge": "^0.14.1"
-  },
-  "engines": {
-    "node": ">= 8.10.0"
+  "name": "identiface",
+  "version": "1.0.2",
+  "browser": {
+    "./sfc": "src/identiface.vue"
   },
   "keywords": [
-    "vuejs",
-    "web",
-    "cam",
-    "getusermedia",
-    "google",
-    "vision",
-    "api"
+    "vue",
+    "webcam",
+    "vue-component"
+  ],
+  "dependencies": {
+    "canvas-to-blob": "^1.0.0",
+    "opencv.js": "^1.2.1"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
   ]
 }
