--- a/demo/package.json
+++ b/demo/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.18.1",
     "canvas-to-blob": "^1.0.0",
     "core-js": "^3.4.4",
+    "imutils": "^1.0.2",
     "numjs": "^0.16.0",
     "opencv.js": "^1.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webrtc-adapter": "^7.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
