--- a/demo/package.json
+++ b/demo/package.json
@@ -14,7 +14,9 @@
     "numjs": "^0.16.0",
     "opencv.js": "^1.2.1",
     "vue": "^2.6.10",
+    "vue-radial-progress": "^0.3.1",
     "vue-router": "^3.1.3",
+    "vue2-circle-progress": "^1.2.3",
     "vuex": "^3.1.2",
     "webrtc-adapter": "^7.6.0"
   },
